correccion divider seccion proyectos home

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -412,6 +412,6 @@ btn-cssbuttons ul li a:hover {
 }
 
 
-.MuiDivider-root .MuiDivider-inset .css-el7kb1{
+.css-el7kb1{
   margin-left: 0px !important;
 }
