--- a/src/pages/RickAndMorty/css/styles.css
+++ b/src/pages/RickAndMorty/css/styles.css
@@ -288,3 +288,28 @@
   }
   }
 
+  @media screen and (max-width: 768px) {
+    .col-img-detalle-rm{
+      width: 66.66666667%;
+    }
+
+    .col-nombre-detalle-rm {
+      width: 100%;
+      
+    }
+    .col-nombre-detalle-rm h1 {
+      font-size: 38px !important;
+      padding-right: 0px !important;
+      padding-left: 0px !important;
+      text-align: center !important;
+      margin-top: 24px;
+    }
+    .img-detalle-rm{
+      height: 100%;
+      width: 100%;
+    }
+
+    .row-detalles-rm{
+      justify-content: center !important;
+    }
+  }
