--- a/src/pages/RickAndMorty/css/styles.css
+++ b/src/pages/RickAndMorty/css/styles.css
@@ -313,3 +313,23 @@
       justify-content: center !important;
     }
   }
+
+  @media screen and (max-width: 1400px) and (min-width: 768px) {
+    #button-favoritos-pantallaGrande{
+      margin-top: 0px !important;
+    }
+
+    .col-img-detalle-rm{
+      width: 33.33333333%;
+    }
+
+    .col-nombre-detalle-rm{
+      width: 50%;
+    }
+  }
+
+  @media screen and (max-width: 991px) and (min-width: 768px) {
+    .col-menu-lateral-info-rm{
+      width: 33.33333333%;
+    }
+  }
