--- a/public/css/styleRecetas.css
+++ b/public/css/styleRecetas.css
@@ -99,9 +99,13 @@
 /* RECETAS.....................HOME................. */
 
 /*Card vista previa de recetas*/
+.rowRecetas {
+  font-size: 0; /* Soluciona un problema de espaciado entre elementos inline-block */
+}
+
 .card-home-rec {
   width: 252px;
-  height: 265px;
+  height: 320px;
   background: white;
   border-radius: 30px;
   box-shadow: 15px 15px 30px #bebebe, -15px -15px 30px #ffffff;
@@ -111,7 +115,7 @@
   margin-right: 32px;
   margin-top: 32px;
   position: relative;
-}      
+}
       
 .img {
   width: 100%;
@@ -159,6 +163,8 @@
   display: flex;
   align-items: center;
   justify-content: left;
+  position: absolute;
+  bottom: 15px;
 }
 
 .icon-box:hover {
@@ -472,5 +478,3 @@
 .boton-save{
   color: var(--gray);
 }
-
-
