--- a/public/css/style.css
+++ b/public/css/style.css
@@ -277,6 +277,25 @@ btn-cssbuttons ul li a:hover {
   padding: 1px;
   border-radius: 50%;
 }
+
+.box-titulo {
+  display: flex;
+  align-items: center;
+  width: 250px;
+  padding: 0 20% 0 20%;
+  margin-left: 40px;
+  color: white;
+  border: #485b62 1px solid;
+  background-color: #5b7078;
+  border-radius: 12px;
+}
+
+.IconLock{
+  height: 16px;
+  width: 16px;
+  margin: 4px;
+}
+
 .red {
   background-color: #ff605c;
 }
@@ -320,6 +339,7 @@ btn-cssbuttons ul li a:hover {
   transform: translateX(5px) rotate(90deg);
   text-decoration: none;
   color: #fffef6;
+  
 }
 
 .button-demo:hover .span-demo {
@@ -327,9 +347,78 @@ btn-cssbuttons ul li a:hover {
   color: #fffef6;
 }
 
+.button-demo_proximamente {
+  display: inline-block;
+  align-items: center;
+  font-family: inherit;
+  font-weight: 500;
+  font-size: 17px;
+  padding: 0.8em 1.3em 0.8em 0.9em;
+  color: #f9d613;
+  background:   #2a0253;
+  border: none;
+  letter-spacing: 0.05em;
+  border-radius: 16px;
+  text-align: center;
+  opacity: 0.7;
+}
+
+.button-demo_proximamente .svg-demo_proximamente {
+  margin-right: 3px;
+  transform: none;
+  transition: transform 0.5s cubic-bezier(0.76, 0, 0.24, 1);
+}
+
+.button-demo_proximamente .span-demo_proximamente {
+  transition: transform 0.5s cubic-bezier(0.76, 0, 0.24, 1);
+  text-decoration: none;
+  color: #f9d613;
+}
+
+.button-demo_proximamente:hover .svg-demo_proximamente:hover{
+  cursor: default!important;
+}
+
+.button-demo_proximamente:hover .span-demo_proximamente:hover{
+  cursor: default!important;
+}
+
 .titulo-demo{
   text-align: left;
 }
+
+.card__background{
+  background-size: cover;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  z-index: 1;
+  border-bottom-left-radius: 30px;
+  border-bottom-right-radius: 30px;
+  transition: opacity 0.3s ease;
+}
+
+.card__background_proximamente{
+  background-size: cover;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  z-index: 1;
+  border-bottom-left-radius: 30px;
+  border-bottom-right-radius: 30px;
+  transition: none;
+  opacity: 0.3;
+}
+
+.card__background_proximamente:hover{
+  opacity: 0.3;
+}
+
+.span-demo_proximamente::after{
+  content: "Próximamente";
+  
+}
+
 /* Boton para enviar el correo */
 .butcorreo {
   width: 150px;
