--- a/public/css/style.css
+++ b/public/css/style.css
@@ -281,13 +281,13 @@ btn-cssbuttons ul li a:hover {
 .box-titulo {
   display: flex;
   align-items: center;
-  width: 250px;
-  padding: 0 20% 0 20%;
-  margin-left: 40px;
+  width: 100%; /* Establecer el ancho máximo */
   color: white;
   border: #485b62 1px solid;
   background-color: #5b7078;
   border-radius: 12px;
+  box-sizing: border-box; /* Esto asegura que el padding esté incluido en el ancho */
+  margin: 0 12px;
 }
 
 .IconLock{
@@ -494,6 +494,31 @@ btn-cssbuttons ul li a:hover {
 .lista-proyectos{
   width: auto;
   
+}
+
+.card__content{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 350px;
+  border-bottom-left-radius: 30px;
+  border-bottom-right-radius: 30px;
+  position: relative;
+}
+
+@media (max-width: 580px) {
+  .card__content{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-bottom-left-radius: 30px;
+    border-bottom-right-radius: 30px;
+    position: relative;
+    height: auto;
+  }
+  .card-prev-rec{
+    width: 80%;
+  }
 }
 
 .progress-home {
