--- a/public/css/styleRecetas.css
+++ b/public/css/styleRecetas.css
@@ -482,3 +482,57 @@
 .botonRecetas{
   color: #00A087!important;
 }
+
+
+.tachado {
+  text-decoration: line-through;
+  text-decoration-thickness: 1px;
+  text-decoration-color: rgb(60, 60, 60);
+}
+
+/* Botón login y registro*/
+.button-recursos {
+  --color: #00A087;
+  font-family: inherit;
+  display: inline-block;
+  height: 2.6em;
+  line-height: 2.5em;
+  position: relative;
+  overflow: hidden;
+  border: 2px solid var(--color);
+  transition: color .5s;
+  z-index: 1;
+  font-size: 17px;
+  border-radius: 6px;
+  font-weight: 600;
+  color: var(--color);
+  text-decoration: none;
+  text-align: center;
+  background-color: white;
+  padding: 0 1em;
+}
+.button-recursos:before {
+  content: "";
+  position: absolute;
+  z-index: -1;
+  background: var(--color);
+  height: 120px;
+  width: 400px;
+  border-radius: 50%;           
+}
+.button-recursos:hover {
+  color: #fff;
+}
+.button-recursos:before {
+  top: 100%;
+  left: 100%;
+  transition: all .7s;
+}
+.button-recursos:hover:before {
+  top: -30px;
+  left: -30px;
+}
+.button-recursos:active:before {
+  background: rgb(1, 152, 132);
+  transition: background 0s;
+}
